	* This means copying, pasting, etc... is fixed!
* Fixed dedicated fullscreen not working with ALT+ENTER toggle
* Fixed not being able to define the Windows key
* Fixed r_fullbright 1 with multitexturing
* Fixed leaderboard appearance at high resolutions
* Fixed moving the camera with the leaderboard enabled
* Mostly fixed panning up and down after you die - you could previously the server and client viewangles while dead... (TODO: ACTUALLY FIX!!!)
* Restored gl_drawbuffer functionality, which was broken in 0.0.6
* Redrew the default crosshairs to actually be centered

NEW FEATURES:
* Renamed cl_showpos to cl_showinfo:
	* Viewangles (both refdef and client) 
	* Number of entities being rendered
	* Number of dynamic lights being rendered
	* Number of particles bing rendered
* Added option to switch between borderless and dedicated fullscreen to settings
* Added lighting to z_tdm_warehouse 
* Texture fixes in z_tdm_subway

OTHER ENHANCEMENTS:
* Moved mouse code from platform specific to platform independent code (because now it is). All input code is now platform independent!
* Renamed in_ cvars to input_ and same for functions
* Made input shift code slightly less insane
* Removed almost all relative path includes (one of them is required due to being compiled from two projects...)
* Scale FOV with aspect ratio - CURRENTLY THIS FUCKS CULLING!
* Reduced s_mixahead value from 0.2 to 0.1 to reduce sound lag 
* UI: Renamed UI_SetActive to UI_SetActivated
	* Renamed the concept of UI "active" to UI activation so that it makes sense
* UI: Allowed Image controls to optionally display a different image when the mouse is clicking on them (ui_control_t->image_path_on_click)

REMOVALS:
* Removed v_centerspeed cvar (was already dead)
* Removed v_centermove cvar (was already dead)
* Removed viewpos command (cl_showinfo 1 far superior and duplicates functionality)